syntax = "proto3";

package dhpc.request;

import "gogoproto/gogo.proto";
import "dhpc/request/params.proto";
import "dhpc/request/allowed_oracles.proto";
import "dhpc/request/miner_response.proto";
import "dhpc/request/request_record.proto";
import "dhpc/request/treasury.proto";

option go_package = "Dhpc/x/request/types";

// GenesisState defines the request module's genesis state.
message GenesisState {
           Params         params              = 1 [(gogoproto.nullable) = false];
  repeated AllowedOracles allowedOraclesList  = 2 [(gogoproto.nullable) = false];
           uint64         allowedOraclesCount = 3;
  repeated MinerResponse  minerResponseList   = 4 [(gogoproto.nullable) = false];
  repeated RequestRecord  requestRecordList   = 5 [(gogoproto.nullable) = false];
           Treasury       treasury            = 6;
}

